--- a/web/internal/templates/invoices.html
+++ b/web/internal/templates/invoices.html
@@ -2,8 +2,8 @@
 
 {{ define "main" }}
 <form id="invoice-form" hx-post="/invoices" hx-target="this" hx-swap="outerHTML">
-    <div class="flex items-center gap-6 border-b border-gray-300 bg-white pb-2">
-        <button class="flex justify-center rounded bg-green-400 px-4 py-2 hover:bg-green-500 active:bg-green-600" type="submit">
+    <div class="flex items-center border-b border-gray-300 bg-white pb-2">
+        <button class="flex w-full justify-center rounded bg-green-400 px-4 py-2 hover:bg-green-500 active:bg-green-600 lg:w-auto" type="submit">
             <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
                 viewBox="0 0 512 512">
                 <path
@@ -11,22 +11,23 @@
             </svg>
             Emitir
         </button>
-        <button class="flex justify-center rounded bg-sky-300 px-4 py-2 hover:bg-sky-400" type="button">
-            <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
-                viewBox="0 0 576 512">
-                <path
-                    d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z" />
-            </svg>
-            Ver Progresso
-        </button>
+        <!-- <button class="flex justify-center rounded bg-sky-300 px-4 py-2 hover:bg-sky-400" type="button"> -->
+        <!--     <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em" -->
+        <!--         viewBox="0 0 576 512"> -->
+        <!--         <path -->
+        <!--             d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z" /> -->
+        <!--     </svg> -->
+        <!--     Ver Progresso -->
+        <!-- </button> -->
         <p class="flex-1 {{ if .FormSuccess }} text-green-500 {{ else }} text-red-500 {{ end }}">{{ .FormMsg }}</p>
     </div>
 
     <section>
-        <div class="flex gap-6 border-b border-gray-400 py-4">
+        <div class="flex gap-6 border-b border-gray-400 py-4 md:flex-col">
 
-            <div class="flex flex-1 flex-col gap-4">
-                <div class="flex flex-col gap-2">
+            <div class="flex w-1/2 flex-initial flex-col gap-4 md:w-full md:flex-1 md:flex-row">
+
+                <div class="flex flex-col gap-2 md:w-1/5">
                     <label for="sender"><strong>Remetente</strong></label>
                     <select class="h-10 rounded bg-gray-100 p-2" id="sender" name="sender">
                         {{ range .FormSelectFields.Entities }}
@@ -36,7 +37,7 @@
                     <sub class="text-red-500">{{ .Invoice.Errors.Sender }}</sub>
                 </div>
 
-                <div class="flex flex-col gap-2">
+                <div class="flex flex-col gap-2 md:w-1/5">
                     <label for="recipient"><strong>Destinatário</strong></label>
                     <select class="h-10 rounded bg-gray-100 p-2" id="recipient" name="recipient">
                         {{ range .FormSelectFields.Entities }}
@@ -46,35 +47,28 @@
                     <sub class="text-red-500">{{ .Invoice.Errors.Recipient }}</sub>
                 </div>
 
-            </div>
-
-            <div class="flex flex-1 flex-col gap-4">
-
-                <div class="flex flex-col gap-2">
+                <div class="flex flex-col gap-2 md:w-1/5">
                     <label for="operation"><strong>Operação</strong></label>
                     <select class="h-10 rounded bg-gray-100 p-2" id="operation" name="operation">
                         {{ range .FormSelectFields.Operations }}
-                            <option value="{{ . }}">{{ . }}</option>
+                        <option value="{{ . }}">{{ . }}</option>
                         {{ end }}
                     </select>
                     <sub class="text-red-500">{{ .Invoice.Errors.Operation }}</sub>
                 </div>
 
-                <div class="flex flex-col gap-2">
+                <div class="flex flex-col gap-2 md:w-1/5">
                     <label for="cfop"><strong>CFOP</strong></label>
                     <select class="h-10 rounded bg-gray-100 p-2" id="cfop" name="cfop">
                         {{ range .FormSelectFields.Cfops }}
-                            <option value="{{ . }}">{{ . }}</option>
+                        <option value="{{ . }}">{{ . }}</option>
                         {{ end }}
                     </select>
                     <sub class="text-red-500">{{ .Invoice.Errors.Cfop }}</sub>
                 </div>
-            </div>
 
-            <div class="flex flex-1 flex-col gap-4">
-
-                <div class="flex flex-col gap-2">
-                    <label for="is_icms_contributor"><strong>Contribuinte ICMS</strong></label>
+                <div class="flex flex-col gap-2 md:w-1/5">
+                    <label class="truncate" for="is_icms_contributor"><strong>Contribuinte ICMS</strong></label>
                     <select class="h-10 rounded bg-gray-100 p-2" id="is_icms_contributor" name="is_icms_contributor">
                         {{ range .FormSelectFields.IcmsOptions }}
                             <option value="{{ . }}">{{ . }}</option>
@@ -83,8 +77,12 @@
                     <sub class="text-red-500">{{ .Invoice.Errors.IsIcmsContributor }}</sub>
                 </div>
 
-                <div class="flex flex-col gap-2">
-                    <label for="is_final_customer"><strong>Consumidor Final</strong></label>
+            </div>
+
+            <div class="flex w-1/2 flex-initial flex-col gap-4 md:w-full md:flex-1 md:flex-row">
+
+                <div class="flex flex-col gap-2 md:w-1/5">
+                    <label class="truncate" for="is_final_customer"><strong>Consumidor Final</strong></label>
                     <select class="h-10 rounded bg-gray-100 p-2" id="is_final_customer" name="is_final_customer">
                         {{ range .FormSelectFields.BooleanField }}
                             <option value="{{ . }}">{{ . }}</option>
@@ -93,19 +91,16 @@
                     <sub class="text-red-500">{{ .Invoice.Errors.IsFinalCustomer }}</sub>
                 </div>
 
-            </div>
-
-            <div class="flex flex-1 flex-col gap-4">
-                <div class="flex flex-col gap-2">
+                <div class="flex flex-col gap-2 md:w-1/5">
                     <label for="shipping"><strong>Frete</strong></label>
-                    <input class="rounded bg-gray-100 p-2" type="number" step="0.01" id="shipping" name="shipping"
+                    <input class="rounded bg-gray-100 p-2 md:w-full" type="number" step="0.01" id="shipping" name="shipping"
                         value="{{ .Invoice.Shipping }}">
                     <sub class="text-red-500">{{ .Invoice.Errors.Shipping }}</sub>
                 </div>
 
-                <div class="flex flex-col gap-2">
-                    <label for="add_shipping_to_total"><strong>Adicionar Frete ao Total</strong></label>
-                    <select class="h-10 rounded bg-gray-100 p-2" id="add_shipping_to_total"
+                <div class="flex flex-col gap-2 md:w-1/5">
+                    <label class="truncate" for="add_shipping_to_total"><strong>Adicionar Frete ao Total</strong></label>
+                    <select class="h-10 rounded bg-gray-100 p-2 md:w-full" id="add_shipping_to_total"
                         name="add_shipping_to_total">
                         {{ range .FormSelectFields.BooleanField }}
                             <option value="{{ . }}">{{ . }}</option>
@@ -114,20 +109,16 @@
                     <sub class="text-red-500">{{ .Invoice.Errors.AddShippingToTotal }}</sub>
                 </div>
 
-            </div>
-
-            <div class="flex flex-1 flex-col gap-4">
-
-                <div class="flex flex-col gap-2">
+                <div class="flex flex-col gap-2 md:w-1/5">
                     <label for="gta"><strong>GTA</strong></label>
-                    <input class="rounded bg-gray-100 p-2" type="text" id="gta" name="gta" value="{{ .Invoice.Gta }}">
+                    <input class="rounded bg-gray-100 p-2 md:w-full" type="text" id="gta" name="gta" value="{{ .Invoice.Gta }}">
                     <sub class="text-red-500">{{ .Invoice.Errors.Gta }}</sub>
                 </div>
 
-                <div class="flex flex-col gap-2">
+                <div class="flex flex-col gap-2 md:w-1/5">
                     <strong>Produtos</strong>
                     <button onclick="this.closest('section').querySelector('dialog').showModal()"
-                        class="group w-full rounded bg-gray-600 px-4 py-2 text-white hover:bg-gray-700" type="button">
+                        class="group rounded bg-gray-600 px-4 py-2 text-white hover:bg-gray-700 md:w-full" type="button">
                         <div class="group-active:scale-90">Gerenciar</div>
                     </button>
                     <sub class="text-red-500">{{ .Invoice.Errors.Items }}</sub>
@@ -168,11 +159,11 @@
                         </button>
                     </div>
 
-                    <div class="flex flex-wrap gap-6 border-b border-gray-400 pb-4">
+                    <div class="flex gap-6 border-b border-gray-400 pb-4 md:flex-col">
 
-                        <div class="flex flex-1 flex-col flex-wrap gap-4">
+                        <div class="flex w-1/2 flex-initial flex-col gap-4 md:w-full md:flex-1 md:flex-row">
 
-                            <div class="flex flex-col gap-2">
+                            <div class="flex flex-col gap-2 md:w-1/3">
                                 <label for="group"><strong>Grupo</strong></label>
                                 <select class="h-10 rounded bg-gray-100 p-2" id="group" name="group">
                                     {{ range .FormSelectFields.Groups }}
@@ -182,36 +173,32 @@
                                 <sub class="text-red-500">{{ .Errors.Group }}</sub>
                             </div>
 
-                            <div class="flex flex-col gap-2">
+                            <div class="flex flex-col gap-2 md:w-1/3">
                                 <label for="description"><strong>Descrição</strong></label>
                                 <input class="rounded bg-gray-100 p-2" type="text" id="description" name="description"
                                     value="">
                                 <sub class="text-red-500">{{ .Errors.Description }}</sub>
                             </div>
 
-                        </div>
-
-                        <div class="flex flex-1 flex-col flex-wrap gap-4">
-
-                            <div class="flex flex-col gap-2">
+                            <div class="flex flex-col gap-2 md:w-1/3">
                                 <label for="quantity"><strong>Quantidade</strong></label>
                                 <input class="rounded bg-gray-100 p-2" type="number" step="0.01" id="quantity"
-                                    name="quantity" value="{{ .Quantity }}">
+                                name="quantity" value="{{ .Quantity }}">
                                 <sub class="text-red-500">{{ .Errors.Quantity }}</sub>
                             </div>
 
-                            <div class="flex flex-col gap-2">
-                                <label for="value_per_unity"><strong>Valor unitário</strong></label>
+                        </div>
+
+                        <div class="flex w-1/2 flex-initial flex-col gap-4 md:w-full md:flex-1 md:flex-row">
+
+                            <div class="flex flex-col gap-2 md:w-1/3">
+                                <label class="truncate" for="value_per_unity"><strong>Valor unitário</strong></label>
                                 <input class="rounded bg-gray-100 p-2" type="number" step="0.01" id="value_per_unity"
-                                    name="value_per_unity" value="{{ .ValuePerUnity }}">
+                                name="value_per_unity" value="{{ .ValuePerUnity }}">
                                 <sub class="text-red-500">{{ .Errors.ValuePerUnity }}</sub>
                             </div>
 
-                        </div>
-
-                        <div class="flex flex-1 flex-col flex-wrap gap-4">
-
-                            <div class="flex flex-col gap-2">
+                            <div class="flex flex-col gap-2 md:w-1/3">
                                 <label for="origin"><strong>Origem</strong></label>
                                 <select class="h-10 rounded bg-gray-100 p-2" id="origin" name="origin">
                                     {{ range .FormSelectFields.Origins }}
@@ -221,8 +208,8 @@
                                 <sub class="text-red-500">{{ .Errors.Origin }}</sub>
                             </div>
 
-                            <div class="flex flex-col gap-2">
-                                <label for="unity_of_measurement"><strong>Unidade de medida</strong></label>
+                            <div class="flex flex-col gap-2 md:w-1/3">
+                                <label class="truncate" for="unity_of_measurement"><strong>Unidade de medida</strong></label>
                                 <select class="h-10 rounded bg-gray-100 p-2" id="unity_of_measurement"
                                     name="unity_of_measurement">
                                     {{ range .FormSelectFields.UnitiesOfMeasurement }}
