--- a/web/internal/views/partials/request-card.html
+++ b/web/internal/views/partials/request-card.html
@@ -3,7 +3,9 @@
     {{ $from := "" }}
     {{ $to := "" }}
     {{ $is_downloadable := false }}
-    {{ $details_endpoint := ""}}
+    {{ $details_endpoint := "" }}
+    {{ $get_form_endpoint := "" }}
+    {{ $target_form := "" }}
 
     {{ if eq .OverviewType "invoice" }}
         {{ $from = .Sender.Name }}
@@ -11,14 +13,18 @@
 
         {{ $is_downloadable = true }}
 
-        {{ $details_endpoint = "invoices"}}
-    {{ else if eq .OverviewType "canceling"}}
+        {{ $details_endpoint = "invoices" }}
+        {{ $get_form_endpoint = "invoices" }}
+        {{ $target_form = "#invoice-form" }}
+    {{ else if eq .OverviewType "canceling" }}
         {{ $from = .Entity.Name }}
         {{ $to = .Number }}
 
         {{ $is_downloadable = false }}
 
-        {{ $details_endpoint = "invoices/cancel"}}
+        {{ $details_endpoint = "invoices/cancel" }}
+        {{ $get_form_endpoint = "invoices/cancel" }}
+        {{ $target_form = "#invoice-cancel-form" }}
     {{ end }}
 
 <li
@@ -67,6 +73,7 @@
         </button>
         {{ end }}
         <button
+            hx-get="/{{ $get_form_endpoint }}/{{ .Id }}/form" hx-target="{{ $target_form }}" hx-swap="outerHTML" hx-trigger="click"
             class="flex w-full justify-center gap-3 whitespace-nowrap rounded bg-sky-300 px-4 py-2 hover:bg-sky-400 active:bg-sky-500 sm:w-fit">
             <svg class="transform lg:translate-y-1" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512">
                 <path
