--- a/web/internal/views/partials/entity-form.html
+++ b/web/internal/views/partials/entity-form.html
@@ -8,9 +8,9 @@
                 placeholder="Nome">
         </div>
         <hr>
-        <div class="mt-4 flex flex-col xl:flex-row">
-            <div class="flex w-full xl:w-1/2 xl:flex-col xl:gap-4 xl:pr-3">
-                <div class="flex w-1/5 flex-col gap-2 pr-4 xl:w-full xl:pr-0">
+        <div class="mt-4 flex lg:flex-col xl:flex-row">
+            <div class="flex w-1/2 flex-col lg:w-full lg:flex-row xl:w-1/2 xl:flex-col xl:gap-4 xl:pr-3">
+                <div class="flex flex-col gap-2 pr-4 lg:w-1/5 xl:w-full xl:pr-0">
                     <label class="truncate" for="user_type"><strong>Tipo</strong></label>
                     <select class="h-10 rounded bg-gray-100 p-2" id="user_type" name="user_type">
                         {{ range .FormSelectFields.UserTypes }}
@@ -20,27 +20,27 @@
                     <sub class="text-red-500">{{ .Entity.Errors.UserType }}</sub>
                 </div>
 
-                <div class="flex w-1/5 flex-col gap-2 pr-4 xl:w-full xl:pr-0">
+                <div class="flex flex-col gap-2 pr-4 lg:w-1/5 xl:w-full xl:pr-0">
                     <label class="truncate" for="cpf_cnpj"><strong>CPF/CNPJ</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="text" id="cpf_cnpj" name="cpf_cnpj"
                         value="{{ .Entity.CpfCnpj }}">
                     <sub class="text-red-500">{{ .Entity.Errors.CpfCnpj }}</sub>
                 </div>
 
-                <div class="flex w-1/5 flex-col gap-2 pr-4 xl:w-full xl:pr-0">
+                <div class="flex flex-col gap-2 pr-4 lg:w-1/5 xl:w-full xl:pr-0">
                     <label class="truncate" for="ie"><strong>Inscrição Estadual</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="text" id="ie" name="ie" value="{{ .Entity.Ie }}">
                     <sub class="text-red-500">{{ .Entity.Errors.Ie }}</sub>
                 </div>
 
-                <div class="flex w-1/5 flex-col gap-2 pr-4 xl:w-full xl:pr-0">
+                <div class="flex flex-col gap-2 pr-4 lg:w-1/5 xl:w-full xl:pr-0">
                     <label class="truncate" for="email"><strong>E-mail</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="email" id="email" name="email"
                         value="{{ .Entity.Email }}">
                     <sub class="text-red-500">{{ .Entity.Errors.Email }}</sub>
                 </div>
 
-                <div class="flex w-1/5 flex-col gap-2 xl:w-full">
+                <div class="flex flex-col gap-2 pr-4 lg:w-1/5 lg:pr-0 xl:w-full">
                     <label class="truncate" for="password"><strong>Senha</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="password" id="password" name="password"
                         value="{{ .Entity.Password }}">
@@ -48,22 +48,22 @@
                 </div>
             </div>
 
-            <div class="flex w-full xl:w-1/2 xl:flex-col xl:gap-4 xl:pl-3">
-                <div class="flex w-1/5 flex-col gap-2 pr-4 xl:w-full xl:pr-0">
+            <div class="flex w-1/2 flex-col lg:w-full lg:flex-row xl:w-1/2 xl:flex-col xl:gap-4 xl:pl-3">
+                <div class="flex flex-col gap-2 lg:w-1/5 lg:pr-4 xl:w-full xl:pr-0">
                     <label class="truncate" for="postal_code"><strong>CEP</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="text" id="postal_code" name="postal_code"
                         value="{{ .Entity.Address.PostalCode }}">
                     <sub class="text-red-500">{{ .Entity.Errors.PostalCode }}</sub>
                 </div>
 
-                <div class="flex w-1/5 flex-col gap-2 pr-4 xl:w-full xl:pr-0">
+                <div class="flex flex-col gap-2 lg:w-1/5 lg:pr-4 xl:w-full xl:pr-0">
                     <label class="truncate" for="neighborhood"><strong>Bairro</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="text" id="neighborhood" name="neighborhood"
                         value="{{ .Entity.Address.Neighborhood}}">
                     <sub></sub>
                 </div>
 
-                <div class="flex w-1/5 flex-col gap-2 pr-4 xl:w-full xl:pr-0">
+                <div class="flex flex-col gap-2 lg:w-1/5 lg:pr-4 xl:w-full xl:pr-0">
                     <label class="truncate" for="street_type"><strong>Logradouro (tipo)</strong></label>
                     <select class="h-10 rounded bg-gray-100 p-2" id="street_type" name="street_type">
                         {{ range .FormSelectFields.StreetTypes }}
@@ -73,14 +73,14 @@
                     <sub class="text-red-500">{{ .Entity.Errors.StreetType }}</sub>
                 </div>
 
-                <div class="flex w-1/5 flex-col gap-2 pr-4 xl:w-full xl:pr-0">
+                <div class="flex flex-col gap-2 lg:w-1/5 lg:pr-4 xl:w-full xl:pr-0">
                     <label class="truncate" for="street_name"><strong>Logradouro (nome)</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="text" id="street_name" name="street_name"
                         value="{{ .Entity.Address.StreetName }}">
                     <sub></sub>
                 </div>
 
-                <div class="flex w-1/5 flex-col gap-2 xl:w-full">
+                <div class="flex flex-col gap-2 lg:w-1/5 xl:w-full">
                     <label class="truncate" for="number"><strong>Número da casa</strong></label>
                     <input class="rounded bg-gray-100 p-2" type="text" id="number" name="number"
                         value="{{ .Entity.Address.Number }}">
@@ -91,31 +91,31 @@
         <div class="flex gap-6">
             <button hx-post="/entities" hx-target="#entity-list" hx-swap="beforeend"
                 class="mt-4 flex flex-1 justify-center rounded bg-green-400 px-4 py-3 hover:bg-green-500" type="submit">
-                <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
+                <svg class="sm:mr-3 sm:translate-y-1 sm:transform" xmlns="http://www.w3.org/2000/svg" height="1em"
                     viewBox="0 0 640 512">
                     <path
                         d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM504 312V248H440c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V136c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H552v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z" />
                 </svg>
-                Registrar
+                <span class="hidden sm:inline">Registrar</span>
             </button>
             {{ if ne .Entity.Id 0 }}
             <button hx-put="/entities/{{ .Entity.Id }}" hx-target="#entity-{{ .Entity.Id }}" hx-swap="outerHTML"
                 class="mt-4 flex flex-1 justify-center rounded bg-sky-300 px-4 py-3 hover:bg-sky-400" type="submit">
-                <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
+                <svg class="sm:mr-3 sm:translate-y-1 sm:transform" xmlns="http://www.w3.org/2000/svg" height="1em"
                     viewBox="0 0 512 512">
                     <path
                         d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z" />
                 </svg>
-                Atualizar
+                <span class="hidden sm:inline">Atualizar</span>
             </button>
             <button hx-delete="/entities/{{ .Entity.Id }}" hx-target="#entity-form" hx-swap="outerHTML"
                 class="mt-4 flex flex-1 justify-center rounded bg-red-400 px-4 py-3 hover:bg-red-500">
-                <svg class="mr-3 translate-y-1 transform" xmlns="http://www.w3.org/2000/svg" height="1em"
+                <svg class="sm:mr-3 sm:translate-y-1 sm:transform" xmlns="http://www.w3.org/2000/svg" height="1em"
                     viewBox="0 0 448 512">
                     <path
                         d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
                 </svg>
-                Deletar
+                <span class="hidden sm:inline">Deletar</span>
             </button>
             {{ end }}
         </div>
