--- a/web/internal/views/partials/request-card-details.html
+++ b/web/internal/views/partials/request-card-details.html
@@ -82,13 +82,13 @@
                     <strong>Diferença</strong>: <span class="text-{{ if .Results.IsPositive}}green{{ else }}red{{ end }}-600"> R$ {{ .Results.Diff }}</span>
                 </li>
                 <li class="sm:w-1/2 sm:pl-2">
-                    <strong>Total de registros</strong>: <span> {{ .Results.TotalRecords }}</span>
+                    <strong>Total de transações</strong>: <span> {{ .Results.TotalRecords }}</span>
                 </li>
                 <li class="sm:w-1/2 sm:pl-2">
-                    <strong>Entradas</strong>: <span> {{ .Results.PositiveRecords }}</span>
+                    <strong>Vendas</strong>: <span> {{ .Results.PositiveRecords }}</span>
                 </li>
                 <li class="sm:w-1/2 sm:pl-2">
-                    <strong>Saídas</strong>: <span> {{ .Results.NegativeRecords }}</span>
+                    <strong>Compras</strong>: <span> {{ .Results.NegativeRecords }}</span>
                 </li>
             {{ else if eq $ReqCardData.OverviewType "printing" }}
                 <li class="sm:w-1/2 sm:pl-2">
