--- a/web/internal/views/partials/login-form.html
+++ b/web/internal/views/partials/login-form.html
@@ -5,6 +5,7 @@
         class="flex w-full flex-col gap-4 rounded p-4 shadow shadow-gray-600 md:w-2/3 md:p-8 lg:w-1/2 xl:w-1/3"
         hx-post="/login"
         hx-target="body"
+        hx-push-url="true"
     >
         <div class="flex flex-1 flex-col gap-2">
             <label for="email"><strong>Email</strong></label>
