--- a/web/internal/views/partials/invoice-form.html
+++ b/web/internal/views/partials/invoice-form.html
@@ -113,7 +113,7 @@
 
                 <div class="flex flex-col gap-2 md:w-1/5">
                     <strong>Produtos</strong>
-                    <button onclick="this.closest('section').querySelector('dialog').showModal()"
+                    <button onclick="this.closest('section').querySelector('dialog').showModal(); document.dispatchEvent(new CustomEvent('enumerate-item-sections'))"
                         class="group rounded bg-gray-600 px-4 py-2 text-white hover:bg-gray-700 md:w-full" type="button">
                         <div class="group-active:scale-90">Gerenciar</div>
                     </button>
@@ -136,6 +136,8 @@
                     hx-trigger="click">
                     +
                 </button>
+                <strong>Total de itens: </strong>
+                <span id="items-count"></span>
             </div>
 
             {{ range .Invoice.Items }}
